--- a/css/main.css
+++ b/css/main.css
@@ -158,7 +158,7 @@ p {
 	}
 
 	#lower.content .item {
-		width:200px;
+		width:250px;
 	}
 
 #slides {
@@ -180,6 +180,21 @@ p {
 		width:590px;
 		height:315px;
 		float:left;
+	}
+
+	.img-wrapper {
+		margin:260px 0 0 -5px;
+		padding:12px 0 0 8px;
+		background:#fff;
+		height:50px;
+	}
+
+	.slide1 {
+		background: url(../img/slide1.gif) no-repeat
+	}
+
+	.slide2 {
+		background: url(../img/slide2.gif) no-repeat
 	}
 
 #pager {
